Color for active

--- a/neuenavbar.html
+++ b/neuenavbar.html
@@ -12,7 +12,7 @@
     <header><img src="testlogo.png"></header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Modlist</a></li>
             <li><a href="#">Loadorder</a></li>
             <li><a href="#">Pictures</a></li>
