Color for active

--- a/neuenavbar.html
+++ b/neuenavbar.html
@@ -88,6 +88,236 @@
         aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
         aksdoaskdasopdoaksdopasdopaospd
         aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdaksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospdHAKKLKAODKS ODKASOPDKPOASDKPAOSDKAOPSDPASODKPOASDKPAOSD
+        aksdoaskdasopdoaksdopasdopaospd
+        aksdoaskdasopdoaksdopasdopaospd
         aksdoaskdasopdoaksdopasdopaospd</p>
     </section>
 </body>
